# Project_Prog_Concurrente

./: .gitignore  CMakeLists.txt  Diagramme de cas d'utilisation.vpp  Diagramme de cas d'utilisation.vpp.bak_000f  Diagramme_classe_proto.drawio  README.md  a faire.txt  idee.txt  main.cpp
Diagramme de séquence/: Gestion de commande.drawio  Gestion de stock.drawio  Passer une commande.drawio  Réservaton d'une table.drawio  payement de l'addition.drawio
ModuleCuisiner/: ModuleCuisiner.cbp  ModuleCuisiner.layout  main.cpp
ModuleNettoyage/: ModuleNettoyage.cbp  ModuleNettoyage.depend  ModuleNettoyage.layout  main.cpp
RestaurantModules/: RestaurantModules.cbp  RestaurantModules.layout  main.cpp
concurrence/concurrence/: CMakeLists.txt  Client.cpp  Client.h  MaitreHotel.cpp  MaitreHotel.h  Plongeur.cpp  Plongeur.h  Serveur.cpp  Serveur.h  chef.cpp  chef.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  table.cpp  table.h
src/: .env  config.json  main.cpp  tes.cpp  test.txt  test2.cpp
src/Controllers/classDeclaration/: MainController.h  MoveController.h  ServerController.h
src/Controllers/classDefinition/: MainController.cpp  MoveController.cpp  ServerController.cpp
src/Managers/classDeclaration/: ManageAssignTable.h  ManageLeadClient.h  TableCreateManager.h  clientGroupManager.h
src/Managers/classDefinition/: ManageAssignTable.cpp  ManageLeadClient.cpp  TableCreateManager.cpp  clientGroupManager.cpp
src/Models/CommonClass/classDeclaration/: Human.h  MaterialModel.h  MobilityModel.h  MotionLessModel.h  Order.h
src/Models/CommonClass/classDefinition/: Human.cpp  MobilityModel.cpp
src/Models/DinningRoom/classDeclaration/: Butler.h  ClientGroup.h  ClientModel.h  DinningRoom.h  Server.h  Table.h  headWaiter.h
src/Models/DinningRoom/classDefinition/: Butler.cpp  ClientGroup.cpp  ClientModel.cpp  DinningRoom.cpp  HeadWaiter.cpp  Server.cpp  Table.cpp
src/Models/classDeclaration/: Order.h  OrderManager.h  RoomClerk.h  ServeManager.h  Server.h
src/Models/classDefinition/: Order.cpp  OrderManager.cpp  ServeManager.cpp
src/Observer/: Observable.cpp  Observable.h  Observer.h
src/View/: MainView.cpp  MainView.h
src/View/DinningRoom/ClassDeclaration/: MobileElementView.h  ServerView.h
src/View/DinningRoom/ClassDefinition/: MobileElementView.cpp  ServerView.cpp
src/View/commonClass/ClassDeclaration/: MobileElementView.h  MotionLessElementView.h
src/View/commonClass/ClassDefinition/: MobileElementView.cpp
src/Views/: MainWindow.cpp
src/factories/DinningRoom/classDeclaration/: ClientGroupFactory.h  TableFactory.h
src/factories/DinningRoom/classDefinition/: ClientGroupFactory.cpp  TableFactory.cpp
src/manageConfig/dataShared/: ShareData.h
src/manageConfig/manageProducerConsumer/: ManageProducerConsumer.cpp  ManageProducerConsumer.h
src/manageConfig/readEnv/: EnvReader.cpp  EnvReader.h
src/manageConfig/readJson/: JsonReader.cpp  JsonReader.h
src/threadPool/: ThreadPool.cpp  ThreadPool.h
tests/TestUtils/: MockUIComponents.h
